SERVER-22391 Handle race in connpool hostTimeout

If a new request comes in at the same moment a hostTimeout triggers we
can race in shutdown (and hit an invariant).  An additional check fixes
the misbehavior.

(cherry picked from commit c2b1e28fd15a4400cbb311057ef33a2120f1e6e2)